* Added aiax-node submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "extra/deep_space"]
 	path = extra/deep_space
 	url = https://github.com/aiax-network/deep_space
+[submodule "extra/aiax-node"]
+	path = extra/aiax-node
+	url = https://github.com/aiax-network/aiax-node
