--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "rimraf": "^3.0.2",
     "ts-node": "^10.2.1",
     "tslib": "^2.3.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "fs-extra": "^10.0.0"
   }
 }
