* Reverted cosmos-sdk removing

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "extra/deep_space"]
 	path = extra/deep_space
 	url = https://github.com/aiax-network/deep_space.git
+[submodule "extra/cosmos-sdk"]
+	path = extra/cosmos-sdk
+	url = https://github.com/cosmos/cosmos-sdk
