--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "aiax": "node dist/src/index.js",
+    "dev:aiax": "ts-node src/index.ts",
     "build:code": "tsc",
     "build:contracts": "hardhat compile"
   },
@@ -39,8 +40,8 @@
     "mitt": "^3.0.0",
     "rfdc": "^1.3.0",
     "rimraf": "^3.0.2",
-    "ts-node": "^10.2.1",
+    "ts-node": "^10.7.0",
     "tslib": "^2.3.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.6.2"
   }
 }
