--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,22 @@
 version: "3.8"
 services:
   gorc:
-    build:
-      context: ./extra/
-      dockerfile: ./Dockerfile.gorc
+    image: aiax-gorc
     command: orchestrator start --cosmos-key=orchestrator --ethereum-key=signer
     volumes:
-      - ./data/local/gorc:/aiax/data/gorc
-    restart: always
+      - ./data/gorc:/aiax/data/gorc
+    restart: on-failure
 
   aiaxd:
-    build:
-      context: ./extra/
-      dockerfile: ./Dockerfile.aiaxd
+    image: aiax-aiaxd
     command: start
-    ports:
-      - 9545:8545
-      - 26657:26657
     volumes:
-      - ./data/local/aiaxd:/aiax/data/aiaxd
-    restart: always
+      - ./data/aiaxd:/aiax/data/aiaxd
+    restart: on-failure
 
   eth:
     image: ethereum/client-go:stable
     command: --goerli --http --http.addr=0.0.0.0 --http.vhosts=* --syncmode light
-    ports:
-      - 8545:8545
     volumes:
-      - ./data/local/eth:/root/.ethereum
-    restart: always
+      - ./data/eth:/root/.ethereum
+    restart: on-failure
